Move gNMI device simulator from impl submodule to parent module
Signed-off-by: Martin Bugan <martin.bugan@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
@@ -12,13 +12,97 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>io.lighty.core</groupId>
+        <artifactId>lighty-parent</artifactId>
+        <version>14.0.1-SNAPSHOT</version>
+        <!-- FIXME When moving to github, add relativePath clause -->
+    </parent>
+
     <groupId>io.lighty.modules.southbound.gnmi</groupId>
     <artifactId>lighty-gnmi-device-simulator</artifactId>
     <version>14.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>lighty-gnmi-device-simulator-impl</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-dom-inmemory-datastore</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <artifactId>lighty-gnmi-commons</artifactId>
+            <!-- FIXME When moving to github, remove version. Declare it in lighty-bom instead. -->
+            <version>14.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <artifactId>lighty-gnmi-proto</artifactId>
+            <!-- FIXME When moving to github, remove version. Declare it in lighty-bom instead. -->
+            <version>14.0.1-SNAPSHOT</version>
+        </dependency>
+        <!--odl-yangtools-yang-parser-->
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-parser-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-parser-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-model-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-model-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-data-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4-runtime</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>annotations</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.11</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-binding-dom-codec</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
