Move RCgNMI application to lighty-applications
Signed-off-by: Martin Bugan <martin.bugan@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
@@ -43,7 +43,7 @@
                dependency-version artifact or remove it completely and use junit only.
          -->
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.applications.rcgnmi</groupId>
             <artifactId>lighty-rcgnmi-app</artifactId>
             <version>14.0.1-SNAPSHOT</version>
             <scope>test</scope>
