--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-module/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-module/pom.xml
@@ -48,17 +48,17 @@
             <version>14.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.models.gnmi</groupId>
             <artifactId>lighty-gnmi-topology-model</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.models.gnmi</groupId>
             <artifactId>lighty-gnmi-yang-storage-model</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.models.gnmi</groupId>
             <artifactId>lighty-gnmi-certificates-storage-model</artifactId>
             <scope>compile</scope>
         </dependency>
