--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-parent/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-parent/pom.xml
@@ -16,7 +16,7 @@
         <groupId>io.lighty.core</groupId>
         <artifactId>lighty-parent</artifactId>
         <version>15.0.0-SNAPSHOT</version>
-        <!-- FIXME When moving to github, add relativePath clause -->
+        <relativePath>../../../../lighty-core/lighty-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>io.lighty.modules.southbound.gnmi</groupId>
