--- a/gnmi-models/lighty-gnmi-models/lighty-gnmi-yang-storage-model/pom.xml
+++ b/gnmi-models/lighty-gnmi-models/lighty-gnmi-yang-storage-model/pom.xml
@@ -16,7 +16,7 @@
         <groupId>io.lighty.core</groupId>
         <artifactId>lighty-binding-parent</artifactId>
         <version>15.0.0-SNAPSHOT</version>
-        <!-- FIXME When moving to github, add relativePath clause -->
+        <relativePath>../../../lighty-core/lighty-binding-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>io.lighty.models.gnmi</groupId>
