Update lighty-gnmi modules groupIds
Signed-off-by: Martin Bugan <martin.bugan@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
@@ -19,7 +19,7 @@
         <relativePath>../../../lighty-core/lighty-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>io.lighty.modules.southbound.gnmi</groupId>
+    <groupId>io.lighty.modules.gnmi</groupId>
     <artifactId>lighty-gnmi-proto</artifactId>
     <version>15.0.0-SNAPSHOT</version>
 
