--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
@@ -18,18 +18,18 @@
         <relativePath>../../../lighty-core/lighty-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>io.lighty.modules.southbound.gnmi</groupId>
+    <groupId>io.lighty.modules.gnmi</groupId>
     <artifactId>lighty-gnmi-connector</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.modules.gnmi</groupId>
             <artifactId>lighty-gnmi-commons</artifactId>
             <!-- FIXME When moving to github, remove version. Declare it in lighty-bom instead. -->
             <version>15.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>io.lighty.modules.southbound.gnmi</groupId>
+            <groupId>io.lighty.modules.gnmi</groupId>
             <artifactId>lighty-gnmi-proto</artifactId>
             <!-- FIXME When moving to github, remove version. Declare it in lighty-bom instead. -->
             <version>15.0.0-SNAPSHOT</version>
