--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-parent/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/lighty-gnmi-parent/pom.xml
@@ -19,7 +19,7 @@
         <relativePath>../../../../lighty-core/lighty-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>io.lighty.modules.southbound.gnmi</groupId>
+    <groupId>io.lighty.modules.gnmi.southbound</groupId>
     <artifactId>lighty-gnmi-parent</artifactId>
     <version>15.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -42,7 +42,7 @@
                 <version>15.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
-                <groupId>io.lighty.modules.southbound.gnmi</groupId>
+                <groupId>io.lighty.modules.gnmi.southbound</groupId>
                 <artifactId>lighty-gnmi-module</artifactId>
                 <version>15.0.0-SNAPSHOT</version>
             </dependency>
