--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -12,7 +12,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.lighty.modules.southbound.gnmi</groupId>
+    <groupId>io.lighty.modules.gnmi.southbound</groupId>
     <artifactId>lighty-gnmi-sb</artifactId>
     <version>15.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
