--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -20,7 +20,7 @@
     </parent>
 
     <groupId>io.lighty.modules.gnmi.southbound</groupId>
-    <artifactId>lighty-gnmi-module</artifactId>
+    <artifactId>lighty-gnmi-sb</artifactId>
     <version>15.0.0-SNAPSHOT</version>
 
     <dependencies>
