Convert sonic_gnoi protofile to YANG
Signed-off-by: Martin Bugan <martin.bugan@pantheon.tech>

--- a/gnmi-models/lighty-gnmi-models/pom.xml
+++ b/gnmi-models/lighty-gnmi-models/pom.xml
@@ -21,6 +21,7 @@
         <module>lighty-gnmi-topology-model</module>
         <module>lighty-gnmi-yang-storage-model</module>
         <module>lighty-gnmi-certificates-storage-model</module>
+        <module>lighty-gnoi-sonic-yang-model</module>
     </modules>
 
 </project>
