--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-commons/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-commons/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>yang-data-codec-gson</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.opendaylight.mdsal</groupId>
+            <artifactId>mdsal-binding-runtime-spi</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
