Skip unnecessary artifacts on publishing to maven.central
Skip gnmi aggregator artifacts, which help to hold just structure in project
 modules
Skip gnmi test module, containing only the integration tests used on build,
 which are not needed when depending on gnmi module implementation

Signed-off-by: Michal Banik <michal.banik@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/pom.xml
+++ b/gnmi-modules/lighty-gnmi/pom.xml
@@ -17,6 +17,11 @@
     <version>15.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.install.skip>true</maven.install.skip>
+    </properties>
+
     <modules>
         <module>lighty-gnmi-connector</module>
         <module>lighty-gnmi-commons</module>
