--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
@@ -23,6 +23,10 @@
     <artifactId>lighty-gnmi-test</artifactId>
     <version>15.0.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.lighty.modules.gnmi</groupId>
