Introduce gnmi-force-capabilities yang model
 Introduce the ability to rewrite device capabilities.
 Some devices not provide complete
 capability list, so missing capabilities must
 be added by this force-capability list parameter

Signed-off-by: Ivan Caladi <ivan.caladi@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -62,6 +62,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>io.lighty.models.gnmi</groupId>
+            <artifactId>lighty-gnmi-force-capabilities</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
         </dependency>
