--- a/gnmi-models/lighty-gnmi-models/pom.xml
+++ b/gnmi-models/lighty-gnmi-models/pom.xml
@@ -21,6 +21,7 @@
         <module>lighty-gnmi-topology-model</module>
         <module>lighty-gnmi-yang-storage-model</module>
         <module>lighty-gnmi-certificates-storage-model</module>
+        <module>lighty-gnmi-force-capabilities</module>
     </modules>
 
 </project>
