--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
@@ -14,14 +14,18 @@
 
     <parent>
         <groupId>io.lighty.core</groupId>
-        <artifactId>lighty-parent</artifactId>
+        <artifactId>lighty-app-parent</artifactId>
         <version>15.0.0-SNAPSHOT</version>
-        <relativePath>../../../lighty-core/lighty-parent/pom.xml</relativePath>
+        <relativePath>../../../lighty-core/lighty-app-parent/pom.xml</relativePath>
     </parent>
 
     <groupId>io.lighty.modules.gnmi</groupId>
     <artifactId>lighty-gnmi-device-simulator</artifactId>
     <version>15.0.0-SNAPSHOT</version>
+
+    <properties>
+        <application.main.class>io.lighty.modules.gnmi.simulatordevice.main.GnmiSimulatorApp</application.main.class>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -84,6 +88,19 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.beust</groupId>
+            <artifactId>jcommander</artifactId>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
