Use JSONAssert for validating Json in IT instead of Gson JsonParser
 Gson JsonParser validate two json, only if Json elements are sorted.
 Order of Json elements in response from gNMI could be change and
 test starts failing. JSONAssert match Json object with unsorted
 Json elements.

Signed-off-by: PeterSuna <Peter.Suna@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
@@ -29,6 +29,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.skyscreamer</groupId>
+            <artifactId>jsonassert</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.lighty.modules.gnmi</groupId>
             <artifactId>lighty-gnmi-connector</artifactId>
             <scope>test</scope>
