Fix configuration and update documentation in gNMI quick start
Signed-off-by: Peter Suna <peter.suna@pantheon.tech>
Signed-off-by: Michal Banik <michal.banik@pantheon.tech>

--- a/gnmi-modules/simulator/simulator_config.json
+++ b/gnmi-modules/simulator/simulator_config.json
@@ -2,11 +2,11 @@
   "gnmi_simulator":{
     "targetAddress": "127.0.0.1",
     "targetPort": 10161,
-    "certPath": "../../../../../lighty-examples/lighty-gnmi-community-restconf-app/src/main/resources/certificates/server.crt",
-    "certKeyPath": "../../../../../lighty-examples/lighty-gnmi-community-restconf-app/src/main/resources/certificates/server-pkcs8.key",
-    "initialConfigDataPath": "../../../../../lighty-examples/lighty-gnmi-community-restconf-app/src/main/resources/simulator/initialJsonData.json",
-    "initialStateDataPath": "../../../../../lighty-examples/lighty-gnmi-community-restconf-app/src/main/resources/simulator/initialJsonData.json",
-    "yangsPath": "../../../../../lighty-examples/lighty-gnmi-community-restconf-app/src/main/resources/yangs",
+    "certPath": "certificates/server.crt",
+    "certKeyPath": "certificates/server-pkcs8.key",
+    "initialConfigDataPath": "simulator/initialJsonData.json",
+    "initialStateDataPath": "simulator/initialJsonData.json",
+    "yangsPath": "./yangs",
     "username": "admin",
     "password": "admin"
   }
