--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -69,6 +69,10 @@
             <artifactId>aaa-encrypt-service</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.lighty.modules</groupId>
             <artifactId>lighty-aaa-encryption-service</artifactId>
             <scope>test</scope>
