Adopt Phosphorus upstreams
https://docs.opendaylight.org/en/latest/release-notes/upgrade-process.html

Yang generator plugin changes:
Remove deprecated maven-sal-api-gen-plugin and replace it with
mdsal-binding-java-api-generator
https://git.opendaylight.org/gerrit/c/mdsal/+/96628
Use FileGenerator for java-api-generator:
https://git.opendaylight.org/gerrit/c/mdsal/+/77680
Remove superfluous plugin dance:
https://git.opendaylight.org/gerrit/c/mdsal/+/96655

Replace deprecated sal-distributed-eos with eos-dom-akka.
Introduce DOMEntityOwnershipService replacement
https://git.opendaylight.org/gerrit/c/controller/+/95731

Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
Signed-off-by: Peter Suna <peter.suna@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
-            <artifactId>mdsal-binding-generator-impl</artifactId>
+            <artifactId>mdsal-binding-generator</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
