--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
@@ -78,8 +78,8 @@
             <artifactId>antlr4-runtime</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
