--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -61,8 +61,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.aaa</groupId>
