--- a/gnmi-models/lighty-gnmi-models/pom.xml
+++ b/gnmi-models/lighty-gnmi-models/pom.xml
@@ -7,14 +7,12 @@
   ~ and is available at https://www.eclipse.org/legal/epl-v10.html
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.lighty.models.gnmi</groupId>
     <artifactId>lighty-gnmi-models</artifactId>
-    <version>15.0.0-SNAPSHOT</version>
+    <version>15.0.0</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
