Use loading models from classpath in gNMI simulator
 -Fix quick start gnmi-community-restconf example

Signed-off-by: Peter Suna <peter.suna@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
@@ -100,6 +100,10 @@
             <artifactId>jcommander</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.lighty.models</groupId>
+            <artifactId>openconfig-models</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
