--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-test/pom.xml
@@ -48,6 +48,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.lighty.models</groupId>
+            <artifactId>openconfig-models</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
