Remove OC Models dependency from gNMI SB & Simulator
 Resolve loading OC models in gNMI quick start example, with
 loading models by path from OC models project.

Signed-off-by: Peter Suna <peter.suna@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-device-simulator/pom.xml
@@ -100,10 +100,6 @@
             <artifactId>jcommander</artifactId>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>io.lighty.models</groupId>
-            <artifactId>openconfig-models</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.opendaylight.mdsal</groupId>
@@ -113,6 +109,11 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.lighty.models</groupId>
+            <artifactId>openconfig-models</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
