--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
@@ -95,4 +95,21 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>source-quality</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.spotbugs</groupId>
+                        <artifactId>spotbugs-maven-plugin</artifactId>
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
