--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>io.lighty.core</groupId>
         <artifactId>lighty-parent</artifactId>
-        <version>16.0.0</version>
+        <version>16.1.0-SNAPSHOT</version>
         <relativePath>../../../lighty-core/lighty-parent/pom.xml</relativePath>
     </parent>
 
