--- a/gnmi-modules/lighty-gnmi/pom.xml
+++ b/gnmi-modules/lighty-gnmi/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>io.lighty.modules.gnmi</groupId>
     <artifactId>lighty-gnmi</artifactId>
-    <version>16.0.0</version>
+    <version>16.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
