--- a/gnmi-models/lighty-gnmi-models/pom.xml
+++ b/gnmi-models/lighty-gnmi-models/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>io.lighty.models.gnmi</groupId>
     <artifactId>lighty-gnmi-models</artifactId>
-    <version>16.0.0</version>
+    <version>16.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
