--- a/gnmi-models/openconfig-models/pom.xml
+++ b/gnmi-models/openconfig-models/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <groupId>io.lighty.core</groupId>
         <artifactId>lighty-binding-parent</artifactId>
-        <version>16.0.0</version>
+        <version>16.1.0-SNAPSHOT</version>
         <relativePath>../../lighty-core/lighty-binding-parent</relativePath>
     </parent>
 
