--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-connector/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>commons-lang3</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.aaa</groupId>
+            <artifactId>aaa-encrypt-service</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
