--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-proto/pom.xml
@@ -53,8 +53,8 @@
             <version>${protobuf.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
     </dependencies>
 
