Get yang-ir from new package
Yang-ir was moved to different package in:
https://github.com/opendaylight/yangtools/commit/acb9f6f1afcb3f36b4a8fb15e37d7cbefd254133

JIRA: LIGHTY-108
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>

--- a/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
+++ b/gnmi-modules/lighty-gnmi/lighty-gnmi-sb/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>commons-collections4</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.yangtools</groupId>
+            <artifactId>yang-ir</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.lighty.models</groupId>
             <artifactId>openconfig-models</artifactId>
             <scope>test</scope>
