Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,6 @@
 	inheritFrom = All-Projects
 [submit]
 	action = inherit
+[access "refs/*"]
+	owner = group saml/odl-gerrit-aaa-committers
+	read = group GitHub Replication
