--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
     </description>
 
     <modules>
+        <module>artifacts</module>
+        <module>bnd-parent</module>
     </modules>
 
     <properties>
