--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <modules>
         <module>artifacts</module>
         <module>bnd-parent</module>
+        <module>features</module>
     </modules>
 
     <properties>
