Adapt Yang models to ODL GNMI
Use mdsal binding parent, project version, and deploy imported
YANG models to work within the project.

Change-Id: Ibdef5233163fa86912d33ac91e7180d9b97e98a2
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/gnmi-models/odl-gnmi-models/odl-gnmi-yang-storage-model/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnmi-yang-storage-model/pom.xml
@@ -6,18 +6,20 @@
   ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
   ~ and is available at http://www.eclipse.org/legal/epl-v10.html
   -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <groupId>io.lighty.core</groupId>
-        <artifactId>lighty-binding-parent</artifactId>
-        <version>23.0.0-SNAPSHOT</version>
-        <relativePath>../../../lighty-core/lighty-binding-parent/pom.xml</relativePath>
+        <groupId>org.opendaylight.mdsal</groupId>
+        <artifactId>binding-parent</artifactId>
+        <version>14.0.18</version>
+        <relativePath/>
     </parent>
 
-    <groupId>io.lighty.models.gnmi</groupId>
-    <artifactId>lighty-gnoi-sonic-yang-model</artifactId>
-    <version>23.0.0-SNAPSHOT</version>
+    <groupId>org.opendaylight.gnmi.models</groupId>
+    <artifactId>odl-gnmi-yang-storage-model</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/PANTHEONtech/lighty</url>
