--- a/gnmi-models/odl-gnmi-models/odl-gnmi-topology-model/pom.xml
+++ b/gnmi-models/odl-gnmi-models/odl-gnmi-topology-model/pom.xml
@@ -11,15 +11,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.lighty.core</groupId>
-        <artifactId>lighty-binding-parent</artifactId>
-        <version>23.0.0-SNAPSHOT</version>
-        <relativePath>../../../lighty-core/lighty-binding-parent/pom.xml</relativePath>
+        <groupId>org.opendaylight.mdsal</groupId>
+        <artifactId>binding-parent</artifactId>
+        <version>14.0.18</version>
+        <relativePath/>
     </parent>
 
-    <groupId>io.lighty.models.gnmi</groupId>
-    <artifactId>lighty-gnmi-topology-model</artifactId>
-    <version>23.0.0-SNAPSHOT</version>
+    <groupId>org.opendaylight.gnmi.models</groupId>
+    <artifactId>odl-gnmi-topology-model</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/PANTHEONtech/lighty</url>
