--- a/gnmi-models/pom.xml
+++ b/gnmi-models/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2021 PANTHEON.tech, s.r.o. and others.  All rights reserved.
+  ~ Copyright (c) 2025 PANTHEON.tech, s.r.o. and others.  All rights reserved.
   ~
   ~ This program and the accompanying materials are made available under the
   ~ terms of the Eclipse Public License v1.0 which accompanies this distribution,
@@ -10,15 +10,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.lighty.models.gnmi</groupId>
-    <artifactId>lighty-gnmi-models</artifactId>
-    <version>23.0.0-SNAPSHOT</version>
+    <groupId>org.opendaylight.gnmi.models</groupId>
+    <artifactId>gnmi-models</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-
-    <name>${project.groupId}:${project.artifactId}</name>
-    <description>
-        The artifact contains models for lighty.io gNMI southbound module.
-    </description>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -26,10 +21,8 @@
     </properties>
 
     <modules>
-        <module>lighty-gnmi-topology-model</module>
-        <module>lighty-gnmi-yang-storage-model</module>
-        <module>lighty-gnmi-certificates-storage-model</module>
-        <module>lighty-gnmi-force-capabilities</module>
-        <module>lighty-gnoi-sonic-yang-model</module>
+        <module>odl-gnmi-models</module>
+        <module>openconfig-models</module>
     </modules>
+
 </project>
