Do not fail javadoc on warnings
Since we have some undocumented methods in gnmi sb module - its
still not so bad to fail the build.

Lower down odlparent's strict default behavior and do not fail
on warnings.

Change-Id: Icc8f5cb05f431e21aa913bd900b23e6c9d808d26
Signed-off-by: Ivan Hrasko <ivan.hrasko@pantheon.tech>

--- a/gnmi-modules/odl-gnmi-sb/pom.xml
+++ b/gnmi-modules/odl-gnmi-sb/pom.xml
@@ -25,6 +25,10 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <url>https://github.com/PANTHEONtech/lighty</url>
 
+    <properties>
+        <maven.javadoc.failOnWarnings>false</maven.javadoc.failOnWarnings>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
