Fix missing openconfig-models dependency in simulator runtime
The openconfig-models dependency was incorrectly scoped as 'test' in the
odl-gnmi-device-simulator pom.xml. This caused the maven-dependency-
plugin to exclude the JAR from the generated 'lib' directory used by the
standalone application.

As a result, the ServiceLoader could not locate the
YangModelBindingProvider implementations at runtime, causing the
simulator to fail during startup with an
EffectiveModelContextBuilderException.

Change-Id: Ida1df44b4c2708a8d4504f7b6e6058db9f2de917
Signed-off-by: tobias.pobocik <tobias.pobocik@pantheon.tech>

--- a/gnmi-modules/odl-gnmi-device-simulator/pom.xml
+++ b/gnmi-modules/odl-gnmi-device-simulator/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.gnmi.models</groupId>
+            <artifactId>openconfig-models</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
@@ -85,12 +90,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.opendaylight.gnmi.models</groupId>
-            <artifactId>openconfig-models</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
